# corva-example-python-apps

./: README.md  dev-requirements.txt  manifest.json  requirements.txt
docs/: scheduled.md
scheduler/drilling-wits-depth-median/: Makefile  README.md  manifest.json  requirements-test.txt  requirements.txt
scheduler/drilling-wits-depth-median/src/: api.py  app.py  (+4 more)
scheduler/example_scheduler_data_time_app/: README.md  lambda_function.py  manifest.json  pyproject.toml  requirements.txt
scheduler/example_scheduler_data_time_app/src/: app.py  configuration.py
scheduler/example_scheduler_data_time_app/test/: app_test.py
scheduler/example_scheduler_depth_app/: Makefile  lambda_function.py  manifest.json  pyproject.toml  requirements.txt
scheduler/example_scheduler_natural_time_app/: lambda_function.py  manifest.json  pyproject.toml  requirements.txt
scheduler/example_scheduler_natural_time_app/src/: app.py  configuration.py
scheduler/example_scheduler_natural_time_app/test/: app_test.py
scheduler/sample_drilling_scheduler_app/: lambda_function.py  manifest.json  requirements.txt
src/: models.py
stream/example_stream_depth_app/: README.md  lambda_function.py  manifest.json  pyproject.toml
stream/example_stream_time_app/: Makefile  lambda_function.py  manifest.json  pyproject.toml  requirements.txt
stream/sample_drilling_stream_app/: lambda_function.py  manifest.json  requirements.txt
stream/sample_frac_app/: lambda_function.py  manifest.json
task/: .gitignore  lambda_function.py
task/example_task_app/: Makefile  README.md  lambda_function.py  manifest.json  pyproject.toml  requirements.txt
task/example_task_app/src/: app.py  configuration.py  post_task.txt
task/example_task_app/test/: app_test.py
task/formation-evaluation-importer/: .flake8  .gitignore  Makefile  README.md  dev-requirements.txt  lambda_function.py  manifest.json  pyproject.toml  requirements-test.txt  requirements.txt
task/formation-evaluation-importer/src/: api.py  app.py  configuration.py  constants.py  models.py  parser.py  utils.py
task/formation-evaluation-importer/tests/: test_app.py
task/formation-evaluation-importer/tests/data/: test-v1.2.las  test-v2.0.las
task/src/: configuration.py  constants.py  logger.py  parser.py  utils.py
(+18 files in other folders)
