[project]
name = "example-scheduler-data-time-app"
version = "0.1.0"
description = "Corva example scheduler data time app"
requires-python = ">=3.11,<4.0"
dependencies = [
    "corva-sdk==2.1.1",
]

[dependency-groups]
dev = [
    "pytest~=8.3.5",
    "ruff~=0.12.11",
]

[tool.uv]
package = false
default-groups = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
