[project]
name = "formation-evaluation-importer"
version = "0.1.0"
description = "Corva example formation evaluation importer"
requires-python = ">=3.11,<3.12"
dependencies = [
    "corva-sdk==2.1.1",
    "lasio==0.32",
    "numpy>=1.26,<3",
    "pydantic>=2.12,<3",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "coverage==7.6.1",
    "freezegun==1.5.1",
    "pytest~=8.3.5",
    "pytest-mock~=3.14.0",
    "requests-mock~=1.12.1",
    "ruff~=0.12.11",
]

[tool.uv]
package = false
default-groups = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]
